# multi_agente

./: LICENSE  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl
src/: main.py
src/routes/: agent_routes.py
src/services/: multiagent.py
